Update pom.xml; Update unit and integration tests for GithubRepository, GithubService and GithubController; Update GithubController response content type